# vst-testbench

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
Source/: FilePlayerProcessor.h  GpuFxWorker.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiBounceEngine.h  MidiTakeRecorder.h  RenderAheadEngine.h
assets/: test_bounce.mid
build-mac/: .ninja_deps  .ninja_log  build.ninja
build-mac/JUCE/: JUCEConfig.cmake  JUCEExportConfig.cmake
build-mac/JUCE/tools/: .ninja_deps  .ninja_log  JUCEConfig.cmake  JUCEExportConfig.cmake  JUCEToolsExport.cmake  build.ninja
build-mac/VstTestBench_artefacts/Release/VST TestBench.app/Contents/: Info.plist
build-mac/VstTestBench_artefacts/Release/VST TestBench.app/Contents/MacOS/MIDI/: rec_20260714_234736.mid  rec_20260714_234912.mid  rec_20260714_235200.mid  rec_20260714_235322.mid  rec_20260714_235456.mid  rec_20260714_235859.mid
build-mac/VstTestBench_artefacts/Release/VST TestBench.app/Contents/Resources/: AppIcon.icns
docs/: PRERENDER.md
